--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -457,8 +457,8 @@
       "features": [
         "Retail and shopping centers",
         "Office buildings and complexes",
-        "Mixed-use developments"
-        "Industrial facilities",
+        "Mixed-use developments",
+        "Industrial facilities"
       ]
     },
     "viewAll": "View All Services"
