--- a/src/i18n/locales/am.json
+++ b/src/i18n/locales/am.json
@@ -449,10 +449,10 @@
       "title": "የንግድ ልማት", 
       "description": "ዘመናዊ የንግድ መስፈርቶችን እና ደረጃዎችን ለማሟላት የተዘጋጁ ባለሙያ ቢሮ ህንጻዎች፣ የችርቻሮ ቦታዎች እና የንግድ ውስብስቦች።",
       "features": [
-        "የቢሮ ህንጻዎች እና ውስብስቦች",
         "የችርቻሮ እና የግብይት ማዕከላት",
-        "የኢንዱስትሪ ተቋማት", 
-        "ድብልቅ አጠቃቀም ልማቶች"
+        "የቢሮ ህንጻዎች እና ውስብስቦች", 
+        "ድብልቅ አጠቃቀም ልማቶች",
+        "የኢንዱስትሪ ተቋማት"
       ]
     },
     "viewAll": "ሁሉንም አገልግሎቶች ይመልከቱ"
