--- a/src/i18n/locales/am.json
+++ b/src/i18n/locales/am.json
@@ -1,16 +1,16 @@
 {
   "nav": {
-    "home": "ቤት",
+    "home": "ዋና ገጽ",
     "about": "ስለ እኛ",
     "services": "አገልግሎቶች", 
-    "book": "ይይዙ",
+    "book": "ይያዙ",
     "view": "ይመልከቱ",
     "projects": "ፕሮጀክቶች",
     "announcements": "ማስታወቂያዎች",
     "contact": "ያነጋግሩን",
     "virtualTour": "ቨርቹዋል ጉብኝት",
     "admin": "አስተዳዳሪ",
-    "maps": "አካባቢ"
+    "maps": "መገኛችን"
   },
   "navbar": {
     "signedInAs": "የገባው መለያ:",
@@ -29,17 +29,17 @@
   "about": {
     "hero": {
       "title": "ስለ ሁዳ ኢንጂነሪንግ",
-      "subtitle": "ከ2009 ዓ.ም. ጀምሮ በጥራት፣ ታማኝነት እና ፈጠራ የኢትዮጵያን ወደፊት እንገነባለን"
+      "subtitle": "ከ2009 ዓ.ም. ጀምሮ በጥራት፣ በታማኝነት እና በፈጠራ የኢትዮጵያን ወደፊት እየገነባ ያለ።"
     },
     "story": {
       "badge": "የተመሰረተ 2009 ዓ.ም (2017 ዓ.ክ)",
       "title": "የእኛ ታሪክ",
-      "p1": "ሁዳ ኢንጂነሪንግ የተመሰረተው የኢትዮጵያን የግንባታ መልክ ለመቀየር ድፍን ራዕይ ተይዞ ነው። በአዲስ አበባ እልቦ ላይ የምንገኝ ሲሆን፣ ከትንሽ የግንባታ ኩባንያ ወደ መሪ የመኖሪያ፣ የንግድ እና ድብልቅ ልማት ኃይል አድገናል።",
-      "p2": "የእኛ ጉዞ በቀላል መርህ ጀመረ፡ በጥራት ላይ መሳሳት የለብንም። ይህ ቁርጠኝነት ከቅንጦት የመኖሪያ ቤቶች እስከ ከፍተኛ የንግድ ህንጻዎች ያካተተ እያንዳንዱን ፕሮጀክት መርቷል። ዛሬ በ50+ የተጠናቀቁ ፕሮጀክቶች እና የዜሮ ሙግት ታሪክ እንኮራለን።",
-      "p3": "እኛን የሚለየን የቴክኒክ እውቀታችን ብቻ ሳይሆን የኢትዮጵያን ልዩ የግንባታ ችግሮች፣ የሀገር ውስጥ ደንቦች እና የደንበኞቻችንን ህልሞች ጥልቅ መረዳት ነው። እኛ ህንጻዎችን ብቻ አንሰራም; ግንኙነቶችን፣ ማህበረሰቦችን እና ወደፊትን እንሰራለን።"
+      "p1": ሁዳ ኢንጂነሪንግ ኃላ.የተ.የግ.ማ ዋና መቀመጫውን በአዲስ አበባ እምብርት ላይ በማድረግ ከትንሽ የግንባታ ድርጅትነት ወደ ግዙፍ  የመኖሪያ፣ የንግድ እና ሁለገብ የግንባታ ድርጅትነት አድጓል።  በጥራት ላይ በጭራሽ የማይደራደረው ሁዳ ከመጀመሪያው ቀን ጀምሮ ይህን በማስጠበቅ ላይ ነው ።",
+      "p2": ይህ ቁርጠኝነት ከዘመናዊ የቤተሰብ ቤቶች እስከ ትላልቅ የንግድ ሕንጻዎች ድረስ እያንዳንዱን ፕሮጀክቶቻችንን መምራት አስችሎናል ሲሆን ከ50 በላይ የተሳካላቸው ፕሮጄክቶች ያለምንም ግጭት ስናስረክብ ፣ ስራችን ለራሱ ይናገራል። በእውነት የሚለየን ግን የኛ የቴክኒክ ችሎታ እና ጥልቅ የአካባቢ ግንዛቤ ነው።",
+      "p3": "የኢትዮጵያን ልዩ የግንባታ ፈተናዎች፣  ከሁሉም በላይ ደግሞ የደንበኞቻችንን ፍላጎት እንረዳለን። በሁዳ ኢንጂነሪንግ ህንፃዎች ብቻ አንገነባም;  ማህበረሰቦችንች እና ዘላቂ ግንኙነቶችን  እንገነባለን።"
     },
     "stats": {
-      "years": "የላቀነት ዓመታት",
+      "years": "ዓመታት",
       "yearsDesc": "በኢትዮጵያ የግንባታ ኢንዱስትሪ ውስጥ ቀጣይነት ያለው እድገት እና መሻሻል",
       "projects": "የተጠናቀቁ ፕሮጀክቶች", 
       "projectsDesc": "ከመኖሪያ እስከ የንግድ ልማቶች የተደረጉ ስኬታማ ፕሮጀክቶች",
@@ -49,47 +49,47 @@
       "satisfactionDesc": "እያንዳንዱ ፕሮጀክት በከፍተኛ ደረጃ እና በሙሉ የደንበኛ እርካታ የተጠናቀቀ"
     },
     "values": {
-      "title": "የእኛ ዋና እሴቶች",
+      "title": "ዋና እሴቶቻትን",
       "description": "እያንዳንዱን ውሳኔያችንን እና የምንወስደውን ፕሮጀክት የሚመሩ መሰረታዊ መርሆች",
       "quality": {
-        "title": "ጥራት በመጀመሪያ",
-        "description": "በጥራት ላይ ፈጽሞ አንዳከር። የምንጠቀመው እያንዳንዱ ቁሳቁስ፣ የምንከተለው እያንዳንዱ ሂደት እና የምንከወነው እያንዳንዱ ዝርዝር ከፍተኛ የግንባታ ደረጃዎችን ያሟላል። ጥራት ዓላማ ብቻ አይደለም - ዋስትናችን ነው።"
+        "title": "ጥራት",
+        "description": "በጥራት ላይ ፈጽሞ አንደራደርም። የምንጠቀመው እያንዳንዱ ቁሳቁስ፣ የምንከተለው እያንዳንዱ ሂደት እና የምንከወነው እያንዳንዱ ዝርዝር ከፍተኛ የግንባታ ደረጃዎችን ያሟላል። ጥራት ዓላማ ብቻ አይደለም - ዋስትናችን ነው።"
       },
       "integrity": {
         "title": "ታማኝነት", 
-        "description": "የኛ የዜሮ ሙግት ታሪክ ስለ እኛ ሚዛናዊ የንግድ አሰራር እና ከሁሉም ባለድርሻ አካላት ጋር ግልጽ ግንኙነት ለመፍጠር ያለን ቁርጠኝነት ብዙ ይናገራል። በተከታታይ፣ ስነ-ምግባራዊ ድርጊቶች እምነት እንገነባለን።"
+        "description": "የኛ ዜሮ የህግ ክስ ታሪክ ስለ እኛ ሚዛናዊ የንግድ አሰራር እና ከሁሉም ባለድርሻ አካላት ጋር ግልጽ ግንኙነት ለመፍጠር ያለን ቁርጠኝነት ይናገራል። በተከታታይ፣ ስነ-ምግባራዊ ድርጊቶች እና እምነት በመገንባት ላይ ነን።"
       },
       "innovation": {
         "title": "ፈጠራ",
-        "description": "ዘመናዊ የግንባታ ዘዴዎችን እና ዝርን ቴክኖሎጂዎችን በመተግበር ዘመናዊ ፍላጎቶችን የሚያሟሉ እና ለኢንዱስትሪው አዲስ ደረጃዎችን የሚያስቀምጡ ህንጻዎችን እናቀርባለን።"
+        "description": "ዘመናዊ የግንባታ ዘዴዎችን እና  ቴክኖሎጂዎችን በመተግበር ዘመናዊ ፍላጎቶችን የሚያሟሉ እና ለኢንዱስትሪው አዲስ ደረጃዎችን የሚያስቀምጡ ህንጻዎችን እናቀርባለን።"
       },
       "teamwork": {
         "title": "ቡድን ስራ",
-        "description": "የባለሙያ ኢንጂነሮቻችን፣ አርክቴክቶች እና ችሎታ ያላቸው ሸፈራዎች በቀረባ መሰናክል በመስራት እያንዳንዱ ፕሮጀክት የደንበኛ ትጠብቀባቸውን ብቻ ሳይሆን በትብብር የላቀነት አማካኝነት እንዲያልፍባቸው ያረጋግጣሉ።"
+        "description": የእኛ መሐንዲሶች፣ አርክቴክቶች፣ እና ፎርመኖች ያለማቋረጥ ከደንበኛ ከሚጠበቀው በላይ የሆኑ ፕሮጀክቶችን ለማቅረብ አብረው ይሰራሉ።"
       },
       "excellence": {
-        "title": "የላቀነት",
-        "description": "ከመጀመሪያ የዲዛይን ምክክር እስከ የመጨረሻ ፕሮጀክት ማድረስ እና ከዚያም በላይ፣ በስራችን እያንዳንዱ ገጽታ ላይ የላቀነትን እንፈልጋለን። የላቀነት ድርጊት አይደለም፣ ግን የሚያዳብርነው ልማድ ነው።"
+        "title": "ደንበኛ ተኮር",
+        "description": "ለደንበኞቻችን በየደረጃው ዘላቂ እሴት እና እርካታን የሚያመጣ ግልጽ መፍትሄዎችን እና አስተማማኝ አገልግሎት በማቅረብ እንደግፋለን።"
       },
       "sustainability": {
         "title": "ዘላቂነት",
-        "description": "ለወደፊቱ እንሰራለን፣ ለደንበኞቻችን እና ለኢትዮጵያ አካባቢ ለትውልዶች ተጠቃሚ የሚሆኑ ዘላቂ አሰራሮችን እና አካባቢን የሚጠብቁ ቁሳቁሶችን በማካተት።"
+        "description": " ለደንበኞቻችን እና ለኢትዮጵያ አካባቢ ለትውልዶች ተጠቃሚ የሚሆኑ ዘላቂ አሰራሮችን እና አካባቢን የሚጠብቁ ቁሳቁሶችን በማካተት ለወደፊቱ እንሰራለን።"
       }
     },
     "team": {
-      "title": "የእኛ ባለሙያ ቡድን",
-      "description": "የግንባታ ህልሞችዎን በክህሎት፣ በመሰጠት እና በማይበተን የላቀነት ቁርጠኝነት ወደ ህይወት የሚያመጡ ባለሙያዎችን ይወቁ",
+      "title": "ባለሙያዎቻችን",
+      "description": በችሎታ፣ በትጋት እና ለላቀ ቁርጠኝነት የግንባታ ህልሞችዎን ወደ ሕይወት የሚያመጡትን ባለሙያዎች  ይወቁ ።",
       "engineers": {
         "title": "ፈቃድ ያላቸው ኢንጂነሮች",
         "description": "በኢትዮጵያ የግንባታ ደረጃዎች እና በአለም አቀፍ ምርጥ አሰራሮች ብዙ ልምድ ያላቸው መዋቅራዊ እና ሲቪል ኢንጂነሮች።"
       },
       "architects": {
-        "title": "የተረጋገጡ አርክቴክቶች",
-        "description": "ተግባራዊነትን ከስነ-ውበት ውበት ጋር የሚያዋህዱ የፈጠራ ዲዛይነሮች የሚያነሳሱ እና የሚቆዩ ህንጻዎችን ለመፍጠር።"
+        "title": "ብቁ አርክቴክቶች",
+        "description": "ተግባራዊነትን ከስነ-ውበት ጋር የሚያዋህዱ የፈጠራ ዲዛይነሮች የሚያነሳሱ እና የሚቆዩ ህንጻዎችን ለመፍጠር።"
       },
       "foremen": {
-        "title": "ችሎታ ያላቸው ሸፈራዎች", 
-        "description": "በግንባታው እያንዳንዱ ደረጃ የጥራት ቁጥጥር እና የደህንነት ማክበርን የሚያረጋግጡ ልምድ ያላቸው ተቆጣጣሪዎች।"
+        "title": "ችሎታ ያላቸው ፎርማን", 
+        "description": "በግንባታው እያንዳንዱ ደረጃ የጥራት ቁጥጥር እና የደህንነትን ማክበርን የሚያረጋግጡ ልምድ ያላቸው ተቆጣጣሪዎች।"
       },
       "safety": {
         "title": "የደህንነት ባለሙያዎች",
@@ -97,7 +97,7 @@
       }
     },
     "equipment": {
-      "title": "የእኛ መሳሪያዎች እና ሀብቶች",
+      "title": "መሳሪያዎቻችን ",
       "description": "የዘመናዊ የግንባታ መሳሪያዎች እና መሳሪያዎች ሁሉን አቀፍ መርከብ እንመርታለን እና እንይዛለን፣ የፕሮጀክት ነጻነት እና የጥራት ቁጥጥር በማረጋገጥ",
       "heavy": {
         "title": "ከባድ ማሽነሪ",
@@ -132,38 +132,38 @@
   },
   "servicesPage": {
     "hero": {
-      "title": "የእኛ አገልግሎቶች",
+      "title": "አገልግሎቶቻችን",
       "subtitle": "ከዲዛይን እስከ ማድረስ ድረስ ሁሉን አቀፍ የግንባታ መፍትሄዎች"
     },
     "residential": {
       "title": "የመኖሪያ ቤት ግንባታ",
-      "description": "ለኢትዮጵያ ቤተሰቦች የተዘጋጁ ዘመናዊ አፓርታሞች፣ ቅንጦት ቤቶች እስከ ከፍተኛ ህንጻዎች፣ ምቾት፣ ተግባራዊነት እና የውበት ውበትን የሚያጣምሩ ዘመናዊ የመኖሪያ ቦታዎችን እንፈጥራለን።",
+      "description": "ለኢትዮጵያ ቤተሰቦች የተዘጋጁ ዘመናዊ አፓርታሞች፣ ቅንጦት ቤቶች እስከ ከፍተኛ ህንጻዎች፣ ምቾት ከውበት ጋር የሚያጣምሩ ዘመናዊ የመኖሪያ ቦታዎችን እንፈጥራለን።",
       "badge": "ተወዳጅ",
       "features": [
-        "ቅንጦት አፓርታማ ውስብስቦች",
+        "ቅንጦት አፓርታማ ",
         "የአንድ ቤተሰብ መኖሪያዎች",
         "ከፍተኛ ልማቶች",
-        "ተመጣጣኝ የመንባት ፕሮጀክቶች"
+        "ተመጣጣኝ ቤቶች"
       ]
     },
     "commercial": {
       "title": "የንግድ ህንጻዎች",
-      "description": "ዘመናዊ የንግድ ፍላጎቶችን ከዝቅተኛ ዲዛይን እና ተግባራዊነት ጋር የሚያሟሉ የቢሮ ውስብስቦች፣ የችርቻሮ ቦታዎች እና የንግድ ህንጻዎች።",
+      "description": "ዘመናዊ የንግድ ቦታዎችን ከአስገራሚ ዲዛይን  የሚያሟሉ ቢሮዎት፣ የችርቻሮ ቦታዎች እና የንግድ ህንጻዎች ጋር።",
       "features": [
-        "የቢሮ ውስብስቦች",
+        "ቢሮዎች",
         "የችርቻሮ ማዕከላት", 
         "የንግድ ፓርኮች",
         "የኮርፖሬት ዋና መሥሪያ ቤቶች"
       ]
     },
     "mixedUse": {
-      "title": "ድብልቅ አጠቃቀም ልማት",
-      "description": "የመኖሪያ፣ የንግድ እና የቢሮ ቦታዎችን የሚያጣምሩ የተቀናጀ ልማቶች ህይወት ባለ የከተማ ማህበረሰቦችን ለመፍጠር።",
+      "title": "ሁለገብ ህንፃዎች",
+      "description": "የመኖሪያ፣ የንግድ እና የቢሮ ቦታዎችን የሚያጣምሩ የተቀናጀ ህንፃ በተመጣጣኝ ዋጋ።",
       "features": [
-        "የመኖሪያ-የንግድ ወይ ጣምሮች",
+        "ለመኖሪያ-ለንግድ ",
         "የከተማ ልማት ፕሮጀክቶች",
         "የማህበረሰብ ማዕከላት",
-        "ብዙ ዓላማ ውስብስቦች"
+        "ሁለገብ ፕሮጀክቶች"
       ]
     },
     "management": {
@@ -178,7 +178,7 @@
     },
     "design": {
       "title": "ዲዛይን እና እቅድ",
-      "description": "ከመንደዝ እስከ ዝርዝር የግንባታ ንድፎች ድረስ ሁሉን አቀፍ የአርክቴክቸራል ዲዛይን እና ኢንጂነሪንግ አገልግሎቶች።",
+      "description": አጠቃላይ የስነ-ህንፃ ዲዛይን እና የምህንድስና አገልግሎቶች ከፅንሰ-ሀሳብ እስከ ዝርዝር የግንባታ ስዕሎች።",
       "features": [
         "የአርክቴክቸራል ዲዛይን",
         "የመዋቅራዊ ኢንጂነሪንግ", 
@@ -187,27 +187,27 @@
       ]
     },
     "utility": {
-      "title": "የመገልገያ ስርዓቶች",
-      "description": "ኤሌክትሪክ፣ ቧንቧዎች፣ HVAC እና የቴሌኮሙኒኬሽን ስርዓቶች ውህደት ጨምሮ ሙሉ የመገልገያ መሰረተ ልማት።",
+      "title": "የማማከር አገልግሎት",
+      "description": በእያንዳንዱ የፕሮጀክትዎ ደረጃ የባለሙያ መመሪያ፣ በመረጃ ላይ የተመሰረተ ውሳኔዎችን፣ ቀልጣፋ ሂደቶችን እና የተሳካ ውጤቶችን ማረጋገጥ።",
       "features": [
-        "የኤሌክትሪክ ስርዓቶች",
-        "የቧንቧ እና የውሀ ስርዓቶች",
-        "HVAC ተከላ",
-        "የቴሌኮሙኒኬሽን ማዋቀሪያ"
+        "የፕሮጀክት እቅድ እና የአዋጭነት ጥናቶች",
+        "የንድፍ እና የምህንድስና ምክክር",
+        "የወጪ ግምት እና በጀት ማውጣት",
+        "የቁጥጥር ተገዢነት እና ፈቃዶች"
       ]
     },
     "why": {
-      "title": "ሁዳ ኢንጂነሪንግን ለምን መምረጥ?",
+      "title": "ሁዳ ኢንጂነሪንግን ለምን እንምረጥ?",
       "subtitle": "በኢትዮጵያ ግንባታ ውስጥ እኛን የሚለይን ምንድን ነው",
       "advantages": "የእኛ ጥቅሞች",
       "ownEquipment": "የራሳችን መሳሪያዎች እና ማሽነሪ:",
       "ownEquipmentDesc": "የግንባታ መሳሪያዎቻችንን እና ከባድ ማሽነሪዎቻችንን እንይዛለን፣ የፕሮጀክት ቁጥጥር እና የወጪ ቆጣቢነትን በማረጋገጥ።",
       "professional": "ባለሙያ ቡድን:",
-      "professionalDesc": "ጥልቅ የሀገር ውስጥ እውቀት ያላቸው ልምድ ያላቸው ኢንጂነሮች፣ አርክቴክቶች እና ችሎታ ያላቸው ሸፈራዎች።",
-      "zero": "ዜሮ ሙግት:",
-      "zeroDesc": "ንፁህ የህግ ሪከርዳችን ለጥራት እና የደንበኛ እርካታ ያለንን ቁርጠኝነት ያሳያል።",
-      "localKnowledge": "የሀገር ውስጥ እውቀት:",
-      "localKnowledgeDesc": "ስለ ኢትዮጵያ የግንባታ ደረጃዎች፣ መሬት እና ሎጂስቲክስ ጥልቅ መረዳት።"
+      "professionalDesc": "ጥልቅ የሀገር ውስጥ እውቀት እና ልምድ ያላቸው ኢንጂነሮች፣ አርክቴክቶች እና ችሎታ ያላቸው ፎርማን።",
+      "zero": "ፈጣን ግንባታ እና በወቅቱ ማስረከብ :",
+      "zeroDesc": "በትክክለኛ እቅድ፣ በሰለጠነ የሰው ሃይል እና በተሰጠ ግብአቶች፣ ፕሮጄክቶች በፍጥነት እንዲጠናቀቁ እና ጥራታቸውን ሳይጓደል በጊዜ መርሐ ግብራቸው መድረሳቸውን እናረጋግጣለን።",
+      "localKnowledge": "ሀገር በቀል እውቀት:",
+      "localKnowledgeDesc": የኢትዮጵያን የመሬት አቀማመጥ እና ሎጂስቲክስ ጥልቅ ግንዛቤ ተግዳሮቶችን ለመገመት እና እንከን የለሽ የፕሮጀክት አፈፃፀም ለማረጋገጥ ያስችለናል።"
     },
     "process": {
       "title": "የእኛ ሂደት",
@@ -216,7 +216,7 @@
       "designEng": "ዲዛይን እና ኢንጂነሪንግ",
       "designEngDesc": "ዝርዝር እቅዶች እና ዝርዝሮች መፍጠር", 
       "construction": "ግንባታ",
-      "constructionDesc": "በጥራት ቁጥጥር ባለሙያ ትፈጻሚነት",
+      "constructionDesc": "ትክክለኛነት ፣ ጥራት እና ቁጥጥር።",
       "delivery": "ማድረስ እና ድጋፍ",
       "deliveryDesc": "በጊዜው ማጠናቀቅ ከቀጣይ ድጋፍ ጋር"
     }
@@ -236,7 +236,7 @@
     "weWillContact": "በቅርቡ እናገናኝዎታለን።",
     "submitFailed": "መላክ አልተሳካም",
     "feedbackFailed": "አስተያየት መላክ አልተሳካም",
-    "feedbackSubmitted": "አስተያየት ተላክ",
+    "feedbackSubmitted": "አስተያየት ተልኳል",
     "form": {
       "title": "መልዕክት ይላኩልን",
       "description": "በታች ያለውን ቅጽ ይሙሉ፣ በ24 ሰዓታት ውስጥ እንመልስልዎታለን",
@@ -259,17 +259,17 @@
       "phoneDesc": "በአሁኑ ጊዜ ለእርዳታ ይደውሉ",
       "email": "ኢሜይል", 
       "emailDesc": "ዝርዝር መረጃዎችዎን ይላኩልን",
-      "location": "አካባቢ",
+      "location": "መገኛ",
       "locationDesc": "በኢትዮጵያ ሙሉ ግምገማ",
       "hours": "የስራ ሰዓቶች",
       "contactInfo": "የእውቂያ መረጃ",
-      "mondayFriday": "ሰኞ - አምስት: 2:00 - 12:00 ሰዓት",
+      "mondayFriday": "ሰኞ - አርብ: 2:00 - 12:00 ሰዓት",
       "saturday": "ቅዳሜ: 3:00 - 10:00 ሰዓት",
-      "sunday": "እሁድ: ዝግ"
+      "sunday": "እሁድ: ዝግ ነው"
     },
     "cta": {
       "title": "ፕሮጀክትዎን ለመጀመር ዝግጁ ነዎት?",
-      "description": "50+ የተሟሉ ደንበኞች ከእኛ ጋር የተሰሩ ፕሮጀክቶችን ይቀላቀሉ",
+      "description": "50+  የተሰሩ ፕሮጀክቶችን ይቀላቀሉ",
       "quote": "ኮት ይጠይቁ",
       "consultation": "ምክክር ያቀናብሩ",
       "completed": "በተሳካ ሁኔታ የተጠናቀቁ ፕሮጀክቶች"
@@ -286,30 +286,30 @@
     },
     "all": {
       "title": "ሁሉም ፕሮጀክቶች", 
-      "description": "የእኛ ሙሉ የግንባታ ፕሮጀክቶች ስብስብ"
+      "description": "የግንባታ ፕሮጀክቶች ስብስብ"
     },
     "details": {
       "location": "አካባቢ",
       "completed": "ተጠናቋል",
-      "floors": "ፎቆች",
-      "units": "አንከዎች",
+      "floors": "ወለሎች",
+      "units": "ክፍሎች",
       "projectValue": "የፕሮጀክት ዋጋ",
       "flagshipBadge": "ምርጥ",
       "completedBadge": "ተጠናቋል",
-      "activeBadge": "ነቃ"
+      "activeBadge": "በግንባታ ላይ"
     }
   },
   "mapsPage": {
     "openInGoogleMaps": "በጉግል ካርታ ውስጥ ክፈት",
     "viewInMaps": "በካርታ ውስጥ ይመልከቱ",
     "contactInformation": "የግንኙነት መረጃ",
-    "directions": "መጠርቀሪያዎች ያግኙ",
+    "directions": "አቅጣጫ ያግኙ",
     "easyContact": "ቀላል ግንኙነት"
   },
   "announcementsPage": {
-    "title": "የኩባንያ ማስታወቂያዎች",
-    "subtitle": "በአዳዲስ ዜናዎቻችን እና የፕሮጀክት እድገቶች ተወቅ",
-    "latestUpdates": "የመጨረሻ የኩባንያ ዝመናዎች እና ማስታወቂያዎች",
+    "title": "ማስታወቂያዎች",
+    "subtitle": "በአዳዲስ ዜናዎቻችን እና የፕሮጀክት እድገቶችን ማሳወቂያ",
+    "latestUpdates": "የቅርብ ጊዜ የኩባንያ ዝመናዎች እና ማስታወቂያዎች",
     "categories": {
       "newProjects": "አዳዲስ ፕሮጀክቶች",
       "construction": "የግንባታ እድገት", 
@@ -375,7 +375,7 @@
   },
   "testimonials": {
     "title": "ደንበኞቻችን ምን ይላሉ",
-    "description": "የግንባታ ፕሮጀክቶቻቸውን እንድንሰራላቸው ከታመኑን ረክተኛ ደንበኞች እውነተኛ ግብረመልስ።"
+    "description": "የግንባታ ፕሮጀክቶቻቸውን እንድንሰራላቸው ከታመኑን ደስተኛ ደንበኞች እውነተኛ ግብረመልስ።"
   },
   "cta": {
     "title": "ፕሮጀክትዎን ለመጀመር ዝግጁ ነዎት?",
@@ -405,31 +405,31 @@
     "yearsExperience": "ዓመታት ልምድ"
   },
   "whyChoose": {
-    "title": "ሁዳ ኢንጂነሪንግን ለምን መምረጥ?",
+    "title": "ሁዳ ኢንጂነሪንግን ለምን ይመርጣሉ?",
     "description": "በኢትዮጵያ ውስጥ ልዩ የግንባታ ፕሮጀክቶችን ለማቅረብ ክህሎት፣ ታማኝነት እና ፈጠራን እናቀራራለን።",
     "quality": {
       "title": "ጥራት እና ደህንነት",
-      "description": "ዜሮ የሕግ ውሳኔ ታሪክ በእያንዳንዱ ፕሮጀክት ላይ ለጥራት ግንባታ እና ሙሉ ደንበኛ እርካታ ያለንን የማይበገር ቁርጠኝነት ያሳያል።"
+      "description": "ጥብቅ የጥራት እና የደህንነት ፕሮቶኮሎችን መጠበቅ በምናቀርበው እያንዳንዱ ፕሮጀክት ውስጥ አስተማማኝ እና ረጅም ጊዜ የሚቆዩ ቤቶችን ለመገንባት ያለንን ቁርጠኝነት ያሳያል።።"
     },
     "expert": {
       "title": "ባለሙያ ቡድን", 
-      "description": "ሙሉ የፕሮጀክት ቁጥጥር ለማድረግ በራሳችን ዓጠቃላይ መሳሪያዎች እና ክብደት ላላቸው ማሽኖች የተደገፉ ባለሙያ ኢንጂነሮች፣ አርክቴክቶች እና የተካኑ ሰራተኞች።"
+      "description": "ልምድ ያካበቱ መሐንዲሶች፣ አርክቴክቶች እና ፎርማኖች፣ በጠቅላላ መሳሪያዎች እና በከባድ መሳሪያዎች የተደገፉ ትክክለኛ የፕሮጀክት አፈፃፀምን ለማረጋገጥ።"
     },
     "timely": {
-      "title": "በጊዜው አደላለፍ",
-      "description": "የጥራት መስፈርቶችን ሳንያበላሸው በጊዜው ማጠናቀቅን ለማረጋገጥ ግልጽ ግንኙነትን እና ተጨባጭ የፕሮጀክት ጊዜ ሰሌዳዎችን እናስቀድማለን።"
+      "title": "በወቅቱ ማድረስ",
+      "description": "እያንዳንዱን ፕሮጀክት በከፍተንኛ ፍጥነት እና ጥራት ለማድረስ ግልፅ የጊዜ ሰሌዳዎችን እና ቅንጅቶችን እንጠብቃለን።"
     },
     "local": {
-      "title": "የሀገር ውስጥ ክህሎት",
-      "description": "ለሰላስ የፕሮጀክት ትግበራ ስለ ኢትዮጵያ የግንባታ መስፈርቶች፣ የሀገር ውስጥ መሬት፣ ሎጂስቲክስ እና ህጋዊ መስፈርቶች ጥልቅ ግንዛቤ።"
+      "title": "ሀገር በቀል ልምድ ",
+      "description": "የአካባቢያዊ የግንባታ ደንቦችን፣ ሎጅስቲክስን እና ተገዢነትን በጥልቀት በመረዳት ፕሮጀክቶችን በሰዓቱ እና ወደ ከፍተኛ ጥራት ለማድረስ ተግዳሮቶችን በተቃና ሁኔታ እንመራለን።"
     },
     "modern": {
       "title": "ዘመናዊ ቴክኖሎጂ",
-      "description": "ፈጠራዊ፣ ቀልጣፋ እና ዘላቂ አወቃቀሮችን ለማቅረብ ዘመናዊ የግንባታ ቴክኖሎጂዎችን እና ዘመናዊ የግንባታ ዘዴዎችን እንጠቀማለን።"
+      "description": "አዳዲስ የግንባታ ቴክኖሎጂዎችን እና የግንባታ ልምዶችን መተግበራችን ፈጠራን,  እና ለአካባቢ ጥበቃ ዘላቂ የሆኑ ፕሮጀክትን ለመፍጠር ያስችለናል.።"
     },
     "fullService": {
-      "title": "ሙሉ አገልግሎት",
-      "description": "ከመጀመሪያ ዲዛይን እና እቅድ አወጣጥ እስከ ግንባታ እና ማስረከቢያ፣ ሰፊ የመጨረሻ እስከ መጨረሻ የግንባታ አገልግሎቶችን እንሰጣለን።"
+      "title": "ዘመናዊ  ኑሮ",
+      "description": "እኛ በምንገነባው እያንዳንዱ ቤት ውስጥ ምቾትን እና ደህንነትን ለማሻሻል ዘመናዊ ቴክኖሎጂዎችን እናካትታለን።"
     }
   },
   "services": {
@@ -494,13 +494,13 @@
     },
     "completion": {
       "title": "ማጠናቀቅ እና ማስረከብ",
-      "description": "የመጨረሻ ምርመራዎች፣ የጥራት ማረጋገጫ እና ለደንበኞች ላስ የፕሮጀክት ማስረከብ።"
+      "description": "የመጨረሻ ምርመራዎች፣ የጥራት ማረጋገጫ እና ለደንበኞች ፕሮጀክቶችን ማስረከብ።"
     }
   },
   "footer": {
-    "companyDesc": "በአዲስ አበባ ላይ የሚገኝ፣ ከዜሮ ሙግት ታሪክ ጋር ከፍተኛ ጥራት ያላቸውን የመኖሪያ፣ የንግድ እና ድብልቅ አጠቃቀም ህንጻዎችን ለማድረስ የተሰማራ መሪ የግንባታ እና የሪል እስቴት ልማት ኩባንያ ነን።",
+    "companyDesc": "በአዲስ አበባ ላይ የሚገኝ፣ ከዜሮ ሙግት ታሪክ ጋር ከፍተኛ ጥራት ያላቸውን የመኖሪያ፣ የንግድ እና ሁለገብ ህንጻዎችን ለማድረስ የተሰማራ መሪ የግንባታ እና የሪል እስቴት ልማት ኩባንያ ነን።",
     "tagline": "የኢትዮጵያን ዘመናዊ ወደፊት እንገነባለን",
-    "established": "የተመሰረተ 2009 ዓ.ም (2017 ዓ.ክ)",
+    "established": "የተመሰረተ 2009 ዓ.ም (2017 ዓ.ም)",
     "projectsCompleted": "50+ የተጠናቀቁ ፕሮጀክቶች", 
     "zeroDisputes": "ዜሮ የህግ ክርክሮች",
     "quickLinks": "ፈጣን ሊንኮች",
@@ -510,17 +510,17 @@
     "ourServices": "የእኛ አገልግሎቶች",
     "servingEthiopia": "ኢትዮጵያን ሁሉ እናገለግላለን",
     "allRights": "ሁሉም መብቶች የተጠበቁ ናቸው።",
-    "values": "ጥራት • ደህንነት • ታማኝነት • የላቀነት"
+    "values": "ጥራት • ደህንነት • ታማኝነት • ዘላቂነት"
   },
   "virtualTour": {
     "title": "ቨርቹዋል ጉብኝት",
     "description": "ንብረቶቻችንን በሦስት ቅርጽ ቨርቹዋል ሪያሊቲ ያስሱ",
     "selectRoom": "የቨርቹዋል ጉብኝትዎን ለመጀመር ክፍል ይምረጡ",
     "bedroom": "መኝታ ቤት",
-    "kitchen": "ኪቺን", 
+    "kitchen": "ማዕድ ቤት", 
     "livingRoom": "የመኖሪያ ክፍል",
     "bathroom": "መታጠቢያ ቤት",
-    "balcony": "ረግያ",
+    "balcony": "ሰገነት",
     "startTour": "ቨርቹዋል ጉብኝት ይጀምሩ"
   },
   "admin": {
@@ -535,7 +535,7 @@
     "deleteProperty": "ንብረት ይሰርዙ",
     "newContacts": "አዳዲስ ግንኙነቶች",
     "publishedAnnouncements": "የታተሙ ማስታወቂያዎች",
-    "newContact": "ከሰሎሞን አዲስ የግንኙነት ቅጽ ማስረከቢያ",
+    "newContact": "አዲስ የግንኙነት ቅጽ ማስረከቢያ",
     "createAndManage": "ማስታወቂያዎችን ይፍጠሩ እና ያስተዳድሩ",
     "viewAndRespond": "የግንኙነት ቅጽ ማስረከቢያዎችን ይመልከቱ እና ይመልሱ",
     "name": "ስም",
@@ -543,7 +543,7 @@
     "new": "አዲስ"
   },
   "maps": {
-    "title": "የእኛ አካባቢ",
+    "title": "የእኛ መገኛ",
     "description": "በካርታ ላይ እኛን ያግኙ እና ቢሮአችንን ይጎብኙ"
   },
   "common": {
