--- a/src/i18n/locales/am.json
+++ b/src/i18n/locales/am.json
@@ -34,8 +34,8 @@
     "story": {
       "badge": "የተመሰረተ 2009 ዓ.ም (2017 ዓ.ክ)",
       "title": "የእኛ ታሪክ",
-      "p1": ሁዳ ኢንጂነሪንግ ኃላ.የተ.የግ.ማ ዋና መቀመጫውን በአዲስ አበባ እምብርት ላይ በማድረግ ከትንሽ የግንባታ ድርጅትነት ወደ ግዙፍ  የመኖሪያ፣ የንግድ እና ሁለገብ የግንባታ ድርጅትነት አድጓል።  በጥራት ላይ በጭራሽ የማይደራደረው ሁዳ ከመጀመሪያው ቀን ጀምሮ ይህን በማስጠበቅ ላይ ነው ።",
-      "p2": ይህ ቁርጠኝነት ከዘመናዊ የቤተሰብ ቤቶች እስከ ትላልቅ የንግድ ሕንጻዎች ድረስ እያንዳንዱን ፕሮጀክቶቻችንን መምራት አስችሎናል ሲሆን ከ50 በላይ የተሳካላቸው ፕሮጄክቶች ያለምንም ግጭት ስናስረክብ ፣ ስራችን ለራሱ ይናገራል። በእውነት የሚለየን ግን የኛ የቴክኒክ ችሎታ እና ጥልቅ የአካባቢ ግንዛቤ ነው።",
+      "p1": "ሁዳ ኢንጂነሪንግ ኃላ.የተ.የግ.ማ ዋና መቀመጫውን በአዲስ አበባ እምብርት ላይ በማድረግ ከትንሽ የግንባታ ድርጅትነት ወደ ግዙፍ  የመኖሪያ፣ የንግድ እና ሁለገብ የግንባታ ድርጅትነት አድጓል።  በጥራት ላይ በጭራሽ የማይደራደረው ሁዳ ከመጀመሪያው ቀን ጀምሮ ይህን በማስጠበቅ ላይ ነው ።",
+      "p2": "ይህ ቁርጠኝነት ከዘመናዊ የቤተሰብ ቤቶች እስከ ትላልቅ የንግድ ሕንጻዎች ድረስ እያንዳንዱን ፕሮጀክቶቻችንን መምራት አስችሎናል ሲሆን ከ50 በላይ የተሳካላቸው ፕሮጄክቶች ያለምንም ግጭት ስናስረክብ ፣ ስራችን ለራሱ ይናገራል። በእውነት የሚለየን ግን የኛ የቴክኒክ ችሎታ እና ጥልቅ የአካባቢ ግንዛቤ ነው።",
       "p3": "የኢትዮጵያን ልዩ የግንባታ ፈተናዎች፣  ከሁሉም በላይ ደግሞ የደንበኞቻችንን ፍላጎት እንረዳለን። በሁዳ ኢንጂነሪንግ ህንፃዎች ብቻ አንገነባም;  ማህበረሰቦችንች እና ዘላቂ ግንኙነቶችን  እንገነባለን።"
     },
     "stats": {
@@ -65,7 +65,7 @@
       },
       "teamwork": {
         "title": "ቡድን ስራ",
-        "description": የእኛ መሐንዲሶች፣ አርክቴክቶች፣ እና ፎርመኖች ያለማቋረጥ ከደንበኛ ከሚጠበቀው በላይ የሆኑ ፕሮጀክቶችን ለማቅረብ አብረው ይሰራሉ።"
+        "description": "የእኛ መሐንዲሶች፣ አርክቴክቶች፣ እና ፎርመኖች ያለማቋረጥ ከደንበኛ ከሚጠበቀው በላይ የሆኑ ፕሮጀክቶችን ለማቅረብ አብረው ይሰራሉ።"
       },
       "excellence": {
         "title": "ደንበኛ ተኮር",
@@ -78,7 +78,7 @@
     },
     "team": {
       "title": "ባለሙያዎቻችን",
-      "description": በችሎታ፣ በትጋት እና ለላቀ ቁርጠኝነት የግንባታ ህልሞችዎን ወደ ሕይወት የሚያመጡትን ባለሙያዎች  ይወቁ ።",
+      "description": "በችሎታ፣ በትጋት እና ለላቀ ቁርጠኝነት የግንባታ ህልሞችዎን ወደ ሕይወት የሚያመጡትን ባለሙያዎች  ይወቁ ።",
       "engineers": {
         "title": "ፈቃድ ያላቸው ኢንጂነሮች",
         "description": "በኢትዮጵያ የግንባታ ደረጃዎች እና በአለም አቀፍ ምርጥ አሰራሮች ብዙ ልምድ ያላቸው መዋቅራዊ እና ሲቪል ኢንጂነሮች።"
@@ -178,7 +178,7 @@
     },
     "design": {
       "title": "ዲዛይን እና እቅድ",
-      "description": አጠቃላይ የስነ-ህንፃ ዲዛይን እና የምህንድስና አገልግሎቶች ከፅንሰ-ሀሳብ እስከ ዝርዝር የግንባታ ስዕሎች።",
+      "description": "አጠቃላይ የስነ-ህንፃ ዲዛይን እና የምህንድስና አገልግሎቶች ከፅንሰ-ሀሳብ እስከ ዝርዝር የግንባታ ስዕሎች።",
       "features": [
         "የአርክቴክቸራል ዲዛይን",
         "የመዋቅራዊ ኢንጂነሪንግ", 
@@ -188,7 +188,7 @@
     },
     "utility": {
       "title": "የማማከር አገልግሎት",
-      "description": በእያንዳንዱ የፕሮጀክትዎ ደረጃ የባለሙያ መመሪያ፣ በመረጃ ላይ የተመሰረተ ውሳኔዎችን፣ ቀልጣፋ ሂደቶችን እና የተሳካ ውጤቶችን ማረጋገጥ።",
+      "description": "በእያንዳንዱ የፕሮጀክትዎ ደረጃ የባለሙያ መመሪያ፣ በመረጃ ላይ የተመሰረተ ውሳኔዎችን፣ ቀልጣፋ ሂደቶችን እና የተሳካ ውጤቶችን ማረጋገጥ።",
       "features": [
         "የፕሮጀክት እቅድ እና የአዋጭነት ጥናቶች",
         "የንድፍ እና የምህንድስና ምክክር",
@@ -207,7 +207,7 @@
       "zero": "ፈጣን ግንባታ እና በወቅቱ ማስረከብ :",
       "zeroDesc": "በትክክለኛ እቅድ፣ በሰለጠነ የሰው ሃይል እና በተሰጠ ግብአቶች፣ ፕሮጄክቶች በፍጥነት እንዲጠናቀቁ እና ጥራታቸውን ሳይጓደል በጊዜ መርሐ ግብራቸው መድረሳቸውን እናረጋግጣለን።",
       "localKnowledge": "ሀገር በቀል እውቀት:",
-      "localKnowledgeDesc": የኢትዮጵያን የመሬት አቀማመጥ እና ሎጂስቲክስ ጥልቅ ግንዛቤ ተግዳሮቶችን ለመገመት እና እንከን የለሽ የፕሮጀክት አፈፃፀም ለማረጋገጥ ያስችለናል።"
+      "localKnowledgeDesc": "የኢትዮጵያን የመሬት አቀማመጥ እና ሎጂስቲክስ ጥልቅ ግንዛቤ ተግዳሮቶችን ለመገመት እና እንከን የለሽ የፕሮጀክት አፈፃፀም ለማረጋገጥ ያስችለናል።"
     },
     "process": {
       "title": "የእኛ ሂደት",
