--- a/src/i18n/locales/am.json
+++ b/src/i18n/locales/am.json
@@ -437,12 +437,12 @@
     "description": "በኢትዮጵያ ውስጥ ለሁሉም የግንባታ ፍላጎቶችዎ ሰፊ የግንባታ መፍትሄዎች።",
     "residential": {
       "title": "የመኖሪያ ቤት ግንባታ",
-      "description": "ከቅንጦት ቤቶች እስከ ከፍተኛ ህንጻዎች፣ ምቾት፣ ተግባራዊነት እና የውበት ውበትን የሚያጣምሩ ዘመናዊ የመኖሪያ ቦታዎችን እንፈጥራለን።",
+      "description": "ከቅንጦት ቤቶች እስከ ከፍተኛ ደረጃ ያላቸው የመኖሪያ ሕንፃዎች ምቾትን እና ውበትን የሚያጣምሩ ዘመናዊ የመኖሪያ ቦታዎችን እንፈጥራለን።",
       "features": [
-        "የአንድ ቤተሰብ ቅንጦት ቤቶች",
-        "ብዙ ፎቅ አፓርታማ ህንጻዎች", 
-        "የመኖሪያ ውስብስቦች",
-        "ብጁ የቤት ዲዛይኖች"
+        "ልዩ የመኖሪያ ቪላዎች",
+        "ዘመናዊ ከፍተኛ ደረጃ ያላቸው አፓርታማዎች", 
+        " የመኖሪያ ሕንፃዎች",
+        "እንደፍላጎቶ የተዘጋጁ የቤት ዲዛይኖች"
       ]
     },
     "commercial": {
@@ -451,7 +451,7 @@
       "features": [
         "የችርቻሮ እና የግብይት ማዕከላት",
         "የቢሮ ህንጻዎች እና ውስብስቦች", 
-        "ድብልቅ አጠቃቀም ልማቶች",
+        "ሁለገብ ህንፃዎች",
         "የኢንዱስትሪ ተቋማት"
       ]
     },
